fix platformSelector on mobile

--- a/src/components/platformSelector/style.module.scss
+++ b/src/components/platformSelector/style.module.scss
@@ -54,10 +54,13 @@
 
 .combobox-wrapper {
   position: relative;
-  display: flex;
   align-items: center;
   padding: 0.25rem;
   padding-bottom: 0px;
+  display: none;
+  @media (min-width: 1024px) {
+    display: flex;
+  }
 }
 
 .combobox {
